--- a/app/src/main/res/layout/activity_delete_battle.xml
+++ b/app/src/main/res/layout/activity_delete_battle.xml
@@ -2,19 +2,20 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/recyclerViewScores"
+    android:id="@+id/recyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShowBattlesActivity">
+    tools:context=".SelectBattleActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/viewScores"
-        android:layout_width="410dp"
-        android:layout_height="703dp"
+        android:id="@+id/view"
+        android:layout_width="409dp"
+        android:layout_height="729dp"
         android:layout_marginEnd="2dp"
+        android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
