--- a/app/src/main/res/layout/activity_score_battle.xml
+++ b/app/src/main/res/layout/activity_score_battle.xml
@@ -9,13 +9,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/view"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:layout_width="410dp"
+        android:layout_height="703dp"
         android:layout_marginEnd="2dp"
-        android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-         />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
