--- a/app/src/main/res/layout/activity_scoring.xml
+++ b/app/src/main/res/layout/activity_scoring.xml
@@ -21,16 +21,17 @@
 
     <TextView
         android:id="@+id/competitor_count_text"
-        android:layout_width="154dp"
-        android:layout_height="74dp"
-        android:text="Competitor Count"
-        android:textSize="20dp"
+        android:layout_width="149dp"
+        android:layout_height="122dp"
+        android:text="100"
+        android:textSize="80sp"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/radio_group"
-        app:layout_constraintHorizontal_bias="0.38"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scoringName"
-        app:layout_constraintVertical_bias="0.042" />
+        app:layout_constraintVertical_bias="0.507" />
 
     <RadioGroup
         android:id="@+id/radio_group"
@@ -43,52 +44,10 @@
         app:layout_constraintTop_toBottomOf="@+id/scoringName">
 
         <RadioButton
-            android:id="@+id/radio_button1"
+            android:id="@+id/radio_button10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1" />
-
-        <RadioButton
-            android:id="@+id/radio_button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2" />
-
-        <RadioButton
-            android:id="@+id/radio_button3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="3" />
-
-        <RadioButton
-            android:id="@+id/radio_button4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="4" />
-
-        <RadioButton
-            android:id="@+id/radio_button5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="5" />
-
-        <RadioButton
-            android:id="@+id/radio_button6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="6" />
-
-        <RadioButton
-            android:id="@+id/radio_button7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="7" />
-
-        <RadioButton
-            android:id="@+id/radio_button8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="8" />
+            android:text="10" />
 
         <RadioButton
             android:id="@+id/radio_button9"
@@ -97,10 +56,53 @@
             android:text="9" />
 
         <RadioButton
-            android:id="@+id/radio_button10"
+            android:id="@+id/radio_button8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10" />
+            android:text="8" />
+
+        <RadioButton
+            android:id="@+id/radio_button7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="7" />
+
+        <RadioButton
+            android:id="@+id/radio_button6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="6" />
+
+        <RadioButton
+            android:id="@+id/radio_button5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5" />
+
+        <RadioButton
+            android:id="@+id/radio_button4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4" />
+
+        <RadioButton
+            android:id="@+id/radio_button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3" />
+
+        <RadioButton
+            android:id="@+id/radio_button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2" />
+
+        <RadioButton
+            android:id="@+id/radio_button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1" />
+
     </RadioGroup>
 
     <Button
@@ -112,4 +114,17 @@
         android:text="Next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"></Button>
+
+    <TextView
+        android:id="@+id/competitor_text"
+        android:layout_width="152dp"
+        android:layout_height="34dp"
+        android:layout_marginEnd="244dp"
+        android:text="Competitor"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/competitor_count_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scoringName"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
